[package]
name = "dusk_phantom"
version = "0.1.0"
edition = "2021"
authors = ["5eqn <subcat2077@outlook.com>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/5eqn/dusk-phantom"
description = "Make unique sounds."

[workspace]
members = ["xtask"]

[lib]
# The `lib` artifact is needed for the standalone target
crate-type = ["cdylib", "lib"]

[build-dependencies]
lalrpop = "0.20.2"

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs", "standalone"] }
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
atomic_float = "0.1"
serde = "1.0.198"
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
hexf-parse = "0.2.1"
realfft = "3.3.0"
rand = "0.8.5"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
name = "eval"
harness = false
